code cleanup and functionality review

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
       content="Job Interview app for a Junior Developer position"
     />
     <title>RadioButtonGroup Project</title>
-  </head>
+    
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  
+     <!--CSS STYLESHEET-->
+     <link rel="stylesheet" href="index.css">
+   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
